--- a/package.json
+++ b/package.json
@@ -1,47 +1,29 @@
 {
-  "name": "client",
-  "private": true,
-  "version": "0.0.0",
+  "name": "server",
+  "version": "1.0.0",
+  "description": "",
+  "main": "server.js",
   "type": "module",
-    "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+  "scripts": {
+    "server": "nodemon server.js",
+    "start": "node server.js"
   },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
   "dependencies": {
-    "@emailjs/browser": "^4.3.3",
-    "bootstrap": "^5.3.3",
-    "client": "file:",
-    "firebase": "^10.10.0",
-    "html2canvas": "^1.4.1",
-    "jspdf": "^3.0.1",
-    "react": "^18.2.0",
-    "react-bootstrap": "^2.10.2",
-    "react-circular-progressbar": "^2.1.0",
-    "react-dom": "^18.2.0",
-    "react-hot-toast": "^2.4.1",
-    "react-phone-input-2": "^2.15.1",
-    "react-router-dom": "^6.22.3",
-    "react-toastify": "^10.0.5",
-    "recorder-js": "^1.0.7",
-    "routes": "^2.1.0",
-    "toast": "^0.5.4",
-    "uuid": "^9.0.1",
-    "web-vitals": "^3.1.0"
+    "@clerk/express": "^1.7.31",
+    "@neondatabase/serverless": "^1.0.1",
+    "axios": "^1.12.1",
+    "cloudinary": "^2.7.0",
+    "cors": "^2.8.5",
+    "dotenv": "^17.2.2",
+    "express": "^5.1.0",
+    "multer": "^2.0.2",
+    "openai": "^5.20.2",
+    "pdf-parse": "^1.1.1"
   },
   "devDependencies": {
-    "@types/react": "^18.2.66",
-    "@types/react-dom": "^18.2.22",
-    "@vitejs/plugin-react": "^4.2.1",
-    "autoprefixer": "^10.4.19",
-    "eslint": "^8.57.0",
-    "eslint-plugin-react": "^7.34.1",
-    "eslint-plugin-react-hooks": "^4.6.0",
-    "eslint-plugin-react-refresh": "^0.4.6",
-    "postcss": "^8.4.38",
-    "tailwindcss": "^3.4.3",
-    "vite": "^5.2.0",
-    "vite-plugin-static-copy": "^2.3.1"
+    "nodemon": "^3.1.10"
   }
 }
